fixed overflow in service section

--- a/src/components/ServiceSection/ServiceSection.module.css
+++ b/src/components/ServiceSection/ServiceSection.module.css
@@ -6,7 +6,7 @@
   text-align: center;
   align-items: center;
   gap: 1rem;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
